apps/production/adguard-home/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
  namespace: adguard-home
spec:
  template:
    spec:
      containers:
      - name: adguard-home
        volumeMounts:
        - name: adguard-data
          mountPath: /opt/adguardhome/work
          subPath: work
        - name: config-processed
          mountPath: /opt/adguardhome/conf
          subPath:
      volumes:
      - name: adguard-data
        persistentVolumeClaim:
          claimName: adguard-home-data-pvc
      - name: config-template
        configMap:
          name: adguard-home-config
      - name: config-processed
        emptyDir: {}
      - name: adguard-config
        $patch: delete
