apps/production/adguard-home/service-patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: adguard-home
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.53
  externalTrafficPolicy: Local
