apps/production/adguard-home/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home
  namespace: adguard-home
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - &host adguard.fanen.dk
      secretName: adguard-home-fanen-dk-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-home-internal
                port:
                  name: http-dashboard
