apps/production/adguard-home/route-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home-route
  namespace: adguard-home
spec:
  hostnames:
    - adguard.fanen.dk
